fix overflow issue

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -122,7 +122,8 @@
 
     &-header {
         font-size: var(--text-case-sm);
-        height: 20vh;
+        height: 25vh;
+        overflow: hidden;
         position: relative;
         text-transform: capitalize;
     }
@@ -131,6 +132,8 @@
         color: rgba(v.$dark, 0.1);
         font-size: var(--text-case-lg);
         opacity: 0;
+        position: relative;
+        bottom: 5rem;
         text-transform: capitalize;
         transition: all 800ms ease 900ms;
         width: 200vw;
